--- a/public/partners.html
+++ b/public/partners.html
@@ -85,6 +85,11 @@
 					<img src="/img/kipp-colored.svg" width="100" class="part-hover">
 				</div>
 			</a>
+			<a href="#bythehand">
+				<div class="byth-swap byth">
+					<img src="/img/byth-colored.svg" width="100" class="part-hover">
+				</div>
+			</a>
     </div> 
   </div>
   <div class="partner-section-1 pf" id="pf">
@@ -192,10 +197,7 @@
 				<!--TODO: Ticker-->
 		</div>
 	</div>
-
-
-
-
+<!--TODO-->
 	<div class="partner-section-1 kipp" id="kipp">
 			<div class="w-container">
 				<div class="phone-part-img">
@@ -204,9 +206,9 @@
 				<div class="part-row-2 w-row">
 					<div class="part-desc-wrap w-col w-col-8">
 						<h3 class="partner-name-left">KIPP : Chicago</h3>
-						<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p class="paragraph">KIPP is a Public Charter School network with schools spread throughout the United States. By focusing on instilling a diligence, a sense of curiosity, and grit in their students, KIPP focused on educating the whole student and better prepare them for their futures.<br><br>KIPP Chicago has partnered with the Lemma team to provide a small cohort of high school age students with SAT Prep.</p>
 						<h4 class="from-them-2">More from KIPP:</h4>
-						<p class="part-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p class="part-desc">A focus on character has been the cornerstone of KIPP since we began and is still the essence of what we believe: to succeed in college and the world beyond, KIPPsters need both a strong academic foundation and well-developed character strengths. They’re deeply interconnected and we never compromise one for the other.</p>
 						<div class="partner-button-wrap w-clearfix"><a href="https://www.kippchicago.org/" target="_blank" class="partner-button w-button">Learn More About KIPP Charter Schools!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
 					</div>
 					<div class="partner-column-2 w-col w-col-4">
@@ -218,10 +220,28 @@
 			</div>
 		</div>
 	</div>
-
-
-
-
+	<div class="partner-section-1 byth" id="bythehand">
+			<div class="w-container">
+				<div class="phone-part-img">
+					<a href="http://bythehand.org/" target="_blank"><img src="/img/byth-colored.svg" width="300" class="partnerimg"></a>
+				</div>
+				<div class="part-row-1 w-row">
+					<div class="partner-column-1 w-col w-col-4">
+						<a href="https://www.btny.org" target="_blank"><img src="/img/byth-colored.svg" width="300" class="partnerimg"></a>
+					</div>
+					<div class="part-desc-wrap w-col w-col-8">
+						<h3 class="partner-name-right">By The Hand Club for Kids</h3>
+						<p class="paragraph">Founded in 2001, By the Hand Club for Kids provides holistic and and nurturing after school programming for historically marginalized communities in the Chicago School District. Through their College Prep Program, By The Hand fosters a college-going culture by taking students to college days, tours, and fairs. 85 percent of their graduating seniors have enrolled in college or university.<br><br>By The Hand Club for Kids partners with Lemma to provide a small cohort of Juniors with remote SAT tutoring from the Lemma Team. The Lemma team is excited to be part of their College Prep Program.</p>
+						<h4 class="from-them-1">More from By The Hand:</h4>
+						<p class="part-desc">From the time students enroll in our program until they’re walking independently as well-adjusted, responsible adults, our mission is to literally and figuratively take our kids by the hand and walk alongside them. We tutor them to academic excellence. We mentor them to make wise, life-defining decisions. And we care for them as our own, meeting their basic nutritional and healthcare needs.</p>
+						<div class="partner-button-wrap w-clearfix"><a href="http://bythehand.org/act-now/give/" target="_blank" class="partner-button w-button">Learn More About By the Hand!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
+					</div>
+			</div>
+			<div class="lemma-ticker w-container">
+					<!--TODO: Ticker-->
+			</div>
+		</div>
+	</div>
   <div class="partner-call">
 			<div class="call">Talk to a member of the Lemma team about partnering with us!</div>
 			<a href="https://lem.ma/home/contact" class="contact-us-button w-button">Contact Us</a>
@@ -451,11 +471,6 @@
 			onscroll();
 
 		})()
-
-
-
-
-
 	</script>
 </body>
 </html>
