--- a/public/partners.html
+++ b/public/partners.html
@@ -363,7 +363,8 @@
 		</div>
 	</footer>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
 	<script src="/js/webflow.js" type="text/javascript"></script>
 
 	<!-- Google Analytics Code -->
@@ -417,7 +418,7 @@
 				var js, fjs = d.getElementsByTagName(s)[0];
 				if (d.getElementById(id)) {return;}
 				js = d.createElement(s); js.id = id;
-				js.src = "https://connect.facebook.net/en_US/sdk.js";
+				js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
 		})
@@ -446,12 +447,30 @@
 	<script>
 		(function() {
 
+			var supportsPassive = false;
+			try {
+				var opts = Object.defineProperty({}, 'passive', {
+					get: function() {
+						supportsPassive = true;
+					}
+				});
+				window.addEventListener("testPassive", null, opts);
+				window.removeEventListener("testPassive", null, opts);
+			} catch(e) {}
+
+
+			function addPassiveEventListener(el, name, fn) {
+				// Use our detect's results. passive applied if supported, capture will be false either way.
+				el.addEventListener(name, fn, supportsPassive ? { passive: true } : false);
+			}
+
+
 			function onscroll(e) {
 				if(window.scrollY < $('.hero').height()) {
 					return;
 				}
 
-				$(window).off('scroll', onscroll);
+				window.removeEventListener('scroll', onscroll);
 
 				$('[data-src]').map(function(i, el) {
 					$(el).attr('src', $(el).attr('data-src'));
@@ -467,7 +486,7 @@
 
 			}
 
-			$(window).on('scroll', onscroll);
+			addPassiveEventListener(window, 'scroll', onscroll);
 			onscroll();
 
 		})()
