--- a/public/prep.html
+++ b/public/prep.html
@@ -155,7 +155,7 @@
 							<div class="w-col w-col-7">
 								<div class="tabgif">
 									<img src="/img/comp-bar.svg" style="width: 400px; height: 25px; display: block;" />
-									<video loop="loop" width="400" height="300">
+									<video loop="loop" width="400" height="300" muted>
 										<source data-src="/img/pedagogy.mp4" type="video/mp4" />
 										<!--<img src="/img/pedagogy.gif" width="400" height="300" />-->
 									</video>
@@ -176,7 +176,7 @@
 							<div class="w-col w-col-7">
 								<div class="tabgif">
 									<img src="/img/comp-bar.svg" style="width: 400px; height: 25px;" />
-									<video loop="loop" width="400" height="300" >
+									<video loop="loop" width="400" height="300" muted>
 										<source data-src="/img/ask-a-q.mp4" type="video/mp4" />
 										<!--<img src="/img/ask-a-q.gif" width="400" height="300" />-->
 									</video>
@@ -197,7 +197,7 @@
 							<div class="w-col w-col-7">
 								<div class="tabgif">
 									<img src="/img/comp-bar.svg" style="width: 400px; height: 25px;" />
-									<video loop="loop" width="400" height="300">
+									<video loop="loop" width="400" height="300" muted>
 										<source data-src="/img/platform.mp4" type="video/mp4" />
 										<!--<img src="/img/platform.gif" width="400" height="300" />-->
 									</video>
@@ -283,7 +283,8 @@
 		</div>
 	</footer>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	
 	<script src="/js/webflow.js" type="text/javascript"></script>
 
 	<!-- Google Analytics Code -->
@@ -337,7 +338,7 @@
 				var js, fjs = d.getElementsByTagName(s)[0];
 				if (d.getElementById(id)) {return;}
 				js = d.createElement(s); js.id = id;
-				js.src = "https://connect.facebook.net/en_US/sdk.js";
+				js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
 		})
@@ -366,6 +367,24 @@
 	<script>
 		(function() {
 
+			var supportsPassive = false;
+			try {
+				var opts = Object.defineProperty({}, 'passive', {
+					get: function() {
+						supportsPassive = true;
+					}
+				});
+				window.addEventListener("testPassive", null, opts);
+				window.removeEventListener("testPassive", null, opts);
+			} catch(e) {}
+
+
+			function addPassiveEventListener(el, name, fn) {
+				// Use our detect's results. passive applied if supported, capture will be false either way.
+				el.addEventListener(name, fn, supportsPassive ? { passive: true } : false);
+			}
+
+
 			var phase = 1;
 
 			function onscroll(e) {
@@ -385,7 +404,7 @@
 
 
 					if(e) {
-						$(window).off('scroll', onscroll);
+						window.removeEventListener('scroll', onscroll);
 					}
 				}
 
@@ -398,7 +417,7 @@
 				phase = 2;
 			}
 
-			$(window).on('scroll', onscroll);
+			addPassiveEventListener(window, 'scroll', onscroll);
 			onscroll();
 
 		})()
