Pricing Links updated
Take a look at the ToDos at the bottom and let me know what you think.

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -62,7 +62,7 @@
               <div class="pricing-price" style="height:64px;">Free</div>
             </div>
             <div class="pricing-product-desc">Our basic version of Lemma Prep to introduce you to our system!</div>
-            <div class="pricing-button-wrap"><a href="#" class="pricing-button blue">Get Started!</a></div>
+            <div class="pricing-button-wrap"><a href="https://lem.ma/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button blue">Get Started!</a></div>
           </div>
         <ul class="pricing-features">
           <li class="pricing-list-item">The Lemma Button</li>
@@ -88,7 +88,7 @@
             <br><span style="font-size: 14px; font-weight: 200; color: grey">*billed annually</span></div>
           </div>
           <div class="pricing-product-desc">The Lemma system guides you to your best SAT score!</div>
-          <div class="pricing-button-wrap"><a href="#" class="pricing-button orange">Get Started!</a></div>
+          <div class="pricing-button-wrap"><a href="https://lemma.app/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button orange">Get Started!</a></div>
         </div>
         <ul class="pricing-features">
           <li class="pricing-list-item">The Lemma Button</li>
@@ -116,7 +116,7 @@
             <div class="pricing-price">$25.00<span style="font-size: 16px; font-weight: 300; color: gray;"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey;">*billed annually</span></div>
           </div>
           <div class="pricing-product-desc">The Lemma team works with you more intensely to boost your score!</div>
-          <div class="pricing-button-wrap"><a href="#" class="pricing-button yellow">Get Started!</a></div>
+          <div class="pricing-button-wrap"><a href="https://lemma.app/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button yellow">Get Started!</a></div>
         </div>
         <ul class="pricing-features">
           <li class="pricing-list-item">Everything in our Guided package, plus...</li>
@@ -139,7 +139,6 @@
           $("pricing-product-top yellow, pricing-button yellow").addClass("blue");
           $("pricing-product-top blue", pricing-product-button blue").addClass("gray);
         })-->
-        <!--Also, ideally the text would change here? something like "already have!"-->
-      <!--TODO: Responsive Tablet, mobile. I'm not sure we should have this page on phones.-->
+        <!--Also, ideally the text would change here? something like "Current Plan"-->
   </body>
 </html>
