--- a/public/pricing.html
+++ b/public/pricing.html
@@ -65,9 +65,9 @@
             <div class="pricing-button-wrap"><a href="https://lem.ma/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button blue">Get Started!</a></div>
           </div>
         <ul class="pricing-features">
-          <li class="pricing-list-item">The Lemma Button</li>
+          <li class="pricing-list-item">The Lemma Adaptive Button</li>
           <li class="pricing-list-item">Your question history</li>
-          <li class="pricing-list-item">2 complete SAT Practice Tests</li>
+          <li class="pricing-list-item">3 SAT Diagnostics</li>
           <li class="pricing-list-item">Access to our problem Explorer</li>
         </ul>
         <ul class="pricing-features-greyed">
@@ -91,7 +91,7 @@
           <div class="pricing-button-wrap"><a href="https://lemma.app/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button orange">Get Started!</a></div>
         </div>
         <ul class="pricing-features">
-          <li class="pricing-list-item">The Lemma Button</li>
+          <li class="pricing-list-item">The Lemma Adaptive Button</li>
           <li class="pricing-list-item">Your question history</li>
           <li class="pricing-list-item">Access to our problem Explorer</li>
           <li class="pricing-list-item">Additional access to other Lemma content</li>
@@ -100,12 +100,12 @@
           <li class="pricing-list-item">Concept-focused assessments</li>
           <li class="pricing-list-item">Personalized study-plan</li>
           <li class="pricing-list-item">Test taking strategies</li>
-          <li class="pricing-list-item">2 &quot;Essentials of SAT Math&quot; lessons from Pavel Grinfeld (coming soon!)</li>
+          <li class="pricing-list-item">2 &quot;Essentials of SAT Math&quot; lessons from Pavel Grinfeld, PhD. (coming soon!)</li>
         </ul>
         <ul class="pricing-features-greyed">
-          <li class="pricing-list-item">More detailed diagnostic exams and information from the Lemma Team</li>
+          <li class="pricing-list-item">Targetted diagnostic exams and instruction from the Lemma Team</li>
           <li class="pricing-list-item">Study scheduling from the Lemma Team</li>
-          <li class="pricing-list-item">The complete &quot;Essentials of SAT Math&quot; course from Pavel Grinfeld</li>
+          <li class="pricing-list-item">The complete &quot;Essentials of SAT Math&quot; course from Pavel Grinfeld, PhD. (coming soon!)</li>
         </ul>
       </div>
       <div class="pricing-product">
@@ -116,13 +116,13 @@
             <div class="pricing-price">$25.00<span style="font-size: 16px; font-weight: 300; color: gray;"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey;">*billed annually</span></div>
           </div>
           <div class="pricing-product-desc">The Lemma team works with you more intensely to boost your score!</div>
-          <div class="pricing-button-wrap"><a href="https://lemma.app/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button yellow">Get Started!</a></div>
+          <div class="pricing-button-wrap"><a href="https://lem.ma/contact" class="pricing-button yellow">Contact us!</a></div>
         </div>
         <ul class="pricing-features">
           <li class="pricing-list-item">Everything in our Guided package, plus...</li>
           <li class="pricing-list-item">1-Hour turn around on any questions you ask in the system</li>
           <li class="pricing-list-item">Study scheduling from the Lemma Team</li>
-          <li class="pricing-list-item">The complete &quot;Essentials of SAT Math&quot; course from Pavel Grinfeld</li>
+          <li class="pricing-list-item">The complete &quot;Essentials of SAT Math&quot; course from Pavel Grinfeld, PhD. (coming soon!)</li>
           <li class="pricing-list-item">Personalized content curated by the Lemma team based on an audit of your skills and weak-points</li>
           <li class="pricing-list-item">3 hours of virtual tutoring from our experts!<br><span style="font-size: 14px; color: gray;">(you can always add more!)</span></li>
         </ul>
