--- a/public/partners.html
+++ b/public/partners.html
@@ -90,6 +90,11 @@
 					<img src="/img/byth-colored.svg" width="100" class="part-hover">
 				</div>
 			</a>
+			<a href="steppingstone">
+				<div class="step-swap">
+					<img src="/img/step-colored.svg" width="100" class="part-hover">
+				</div>
+			</a>
     </div> 
   </div>
   <div class="partner-section-1 pf" id="pf">
@@ -197,7 +202,6 @@
 				<!--TODO: Ticker-->
 		</div>
 	</div>
-<!--TODO-->
 	<div class="partner-section-1 kipp" id="kipp">
 			<div class="w-container">
 				<div class="phone-part-img">
@@ -242,6 +246,50 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+
+	
+	<!--TODO-->
+	<div class="partner-section-1 step" id="steppingstone">
+		<div class="w-container">
+			<div class="phone-part-img">
+				<a href="https://www.steppingstonescholars.org" target="_blank"><img src="/img/step-colored.svg" width="300" class="partnerimg"></a>
+			</div>
+			<div class="part-row-2 w-row">
+				<div class="part-desc-wrap w-col w-col-8">
+					<h3 class="partner-name-left">Steppingstone Scholars</h3>
+					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<h4 class="from-them-2">More from Steppingstone Scholars:</h4>
+					<p class="part-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<div class="partner-button-wrap w-clearfix"><a href="https://www.steppingstonescholars.org" target="_blank" class="partner-button w-button">Learn More About Steppingstone!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
+				</div>
+				<div class="partner-column-2 w-col w-col-4">
+						<a href="https://www.steppingstonescholars.org" target="_blank"><img src="/img/step-colored.svg" width="300" class="partnerimg"></a>
+					</div>
+		</div>
+		<div class="lemma-ticker w-container">
+				<!--TODO: Ticker-->
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="partner-call">
 			<div class="call">Talk to a member of the Lemma team about partnering with us!</div>
 			<a href="https://lem.ma/home/contact" class="contact-us-button w-button">Contact Us</a>
@@ -321,7 +369,7 @@
 						</table>
 						<br />
 						<!-- TODO: Make dynamic -->
-						<span>&copy; 2018 Lemma, Inc.</span>
+						<span>&copy; 2019 Lemma, Inc.</span>
 					</div>
 				</div>
 				<div class="w-col w-col-4">
