--- a/public/prep.html
+++ b/public/prep.html
@@ -103,7 +103,7 @@
 		<div class="w-container">
 			<h2 class="heading-10">Our Partners</h2>
 			<div class="partner-wrap">
-				<a href="https://www.philadelphiafutures.org/" target="_blank" />
+				<a href="https://www.philadelphiafutures.org/" target="_blank">
 					<img class="partner-image" data-src="/img/pf-color.svg" data-ix="icon-grow"/>
 				</a>
 				<a href="http://letsgetready.org/" target="_blank">
@@ -122,6 +122,10 @@
 				<a href="https://www.kippchicago.org/" class="kipp" target="_blank">
 					<img class="partner-image"
 					data-src="/img/kipp-colored.svg" data-ix="icon-grow"/>
+				</a>
+				<a href="https://www.steppingstonescholars.org/" class="step" target=")_blank">
+					<img class="partner-image"
+					data-src="/img/step-colored.svg" data-ix="icon-grow"/>
 				</a>
 			</div>
 		</div>
@@ -241,7 +245,7 @@
 						</table>
 						<br />
 						<!-- TODO: Make dynamic -->
-						<span>&copy; 2018 Lemma, Inc.</span>
+						<span>&copy; 2019 Lemma, Inc.</span>
 					</div>
 				</div>
 				<div class="w-col w-col-4">
