--- a/public/pricing.html
+++ b/public/pricing.html
@@ -128,6 +128,71 @@
         </ul>
       </div>
     </div>
+    <footer>
+      <div class="w-container" style="padding-top: 15px; text-align: center">
+        <div class="w-row">
+          <div class="w-col w-col-4" style="font-size: 12px; color: #a0a3a4">
+            <div class="logofooter"><img alt="Lemma Logo" src="https://storage.googleapis.com/lm-assets/img/home/logo.png" /></div>
+            <div style="display: inline-block">
+              <table>
+                <tbody>
+                  <tr>
+                    <td style="padding-right: 20px"><i class="fa fa-map-pin" /></td>
+                    <td style="text-align: right">Philadelphia, PA</td>
+                  </tr>
+                  <tr>
+                    <td style="padding-right: 20px"><i class="fa fa-phone" /></td>
+                    <td style="text-align: right">(212) 588-2920</td>
+                  </tr>
+                  <tr>
+                    <td style="padding-right: 20px"><i class="fa fa-envelope" /></td>
+                    <td style="text-align: right"><a href="mailto:info@lem.ma">info@lem.ma</a></td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+              <!-- TODO: Make dynamic -->
+              <span>&copy; 2019 Lemma, Inc.</span>
+            </div>
+          </div>
+          <div class="w-col w-col-4">
+            <h6 class="heading7">GENERAL LINKS</h6>
+            <ul class="footer-ul">
+              <li>
+                <a href="/home">Home</a>
+              </li>
+              <li>
+                <a href="https://angel.co/lemma" rel="noopener">Careers</a>
+              </li>
+              <li>
+                <a href="/terms">Terms of Service</a>
+              </li>
+              <li>
+                <a href="/privacy">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+          <div class="w-col w-col-4 social">
+            <ul>
+              <li class="social">
+                <a href="https://www.facebook.com/lemmalearning" target="_blank" rel="noopener"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li class="social">
+                <a href="https://twitter.com/LemmaLearning" target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a>
+              </li>
+              <li class="social">
+                <a href="https://www.youtube.com/channel/UCr22xikWUK2yUW4YxOKXclQ" target="_blank" rel="noopener">
+                  <i class="fa fa-youtube"></i>
+                </a>
+              </li>
+              <li class="social">
+                <a href="https://www.instagram.com/lemmalearning" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!--
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     
