--- a/public/partners.html
+++ b/public/partners.html
@@ -91,7 +91,7 @@
 				</div>
 			</a>
 			<a href="steppingstone">
-				<div class="step-swap">
+				<div class="step-swap step">
 					<img src="/img/step-colored.svg" width="100" class="part-hover">
 				</div>
 			</a>
@@ -246,14 +246,6 @@
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-
-	
-	<!--TODO-->
 	<div class="partner-section-1 step" id="steppingstone">
 		<div class="w-container">
 			<div class="phone-part-img">
@@ -262,10 +254,10 @@
 			<div class="part-row-2 w-row">
 				<div class="part-desc-wrap w-col w-col-8">
 					<h3 class="partner-name-left">Steppingstone Scholars</h3>
-					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="paragraph">Steppingstone Scholars was founded in 1999 to address the crisis of urban education in Philadelphia. Serving students ranging from ages 10 to 24, Steppingstone provides academic enrichment programming to help students succeed to and through college.<br><br>To do so, Steppingstone Scholars has designed three "Pathways" to susccess. The Steppingstone Academy (TSA), the Middle Grades Academy (MGA), and its Pipeline Services. Lemma has partnered with Steppingstone Scholars to provide online SAT prep to its students currently in their Sophomore and Junior years of high school. We hope to collaborate and continue to provide the young scholars of Philadelphia with the resources they need to succeed to and through college!</p>
 					<h4 class="from-them-2">More from Steppingstone Scholars:</h4>
-					<p class="part-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<div class="partner-button-wrap w-clearfix"><a href="https://www.steppingstonescholars.org" target="_blank" class="partner-button w-button">Learn More About Steppingstone!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
+					<p class="part-desc">Our Mission: Steppingstone Scholars, working with families and school partners, provides rigorous educational programming and support for talented underserved students in the Philadelphia Region to achieve academic success, opportunity, and a college degree.</p>
+					<div class="partner-button-wrap w-clearfix"><a href="https://www.steppingstonescholars.org/donate" target="_blank" class="partner-button w-button">Learn more about Steppingstone!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
 				</div>
 				<div class="partner-column-2 w-col w-col-4">
 						<a href="https://www.steppingstonescholars.org" target="_blank"><img src="/img/step-colored.svg" width="300" class="partnerimg"></a>
@@ -276,20 +268,6 @@
 		</div>
 	</div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div class="partner-call">
 			<div class="call">Talk to a member of the Lemma team about partnering with us!</div>
 			<a href="https://lem.ma/home/contact" class="contact-us-button w-button">Contact Us</a>
