--- a/public/partners.html
+++ b/public/partners.html
@@ -270,7 +270,7 @@
 </div>
   <div class="partner-call">
 			<div class="call">Talk to a member of the Lemma team about partnering with us!</div>
-			<a href="https://lem.ma/home/contact" class="contact-us-button w-button">Contact Us</a>
+			<a href="https://www.lem.ma/home/contact?partner" class="contact-us-button w-button">Contact Us</a>
 		</div>
 	</div>
   <div class="why-lemma-partnership" id="lemdif">
