--- a/public/pricing.html
+++ b/public/pricing.html
@@ -17,7 +17,7 @@
     <meta property="fb:app_id" content="810405998993973">
     <meta property="og:url" content="https://www.lem.ma/prep/">
     <meta property="og:image" content="https://www.lem.ma/prep/images/og_img.jpg">
-    <title>Lemma - Education is more than content</title>
+    <title>Lemma - SAT Prep Pricing</title>
   
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
     <noscript id="deferred-styles">
@@ -46,17 +46,17 @@
         </div>
       </div>
     </div>
+    <div class="pricing-header-button-wrap">
+      <div class="pricing-teacher-call">Are you a College Access organization looking to boost your students' test scores?</div><a href="https://www.lem.ma/home/contact?partner" class="pricing-header-button blue">Become our next partner!</a></div>
     <div class="pricing-hero">
-      <h1 class="pricing-head">Upgrade your Lemma account</h1>
+      <h1 class="pricing-head">Choose your plan</h1>
         <div class="pricing-hero-call">Still not sure? <a href="https://lem.ma/blog">Check out our testimonials!</a>
         </div>
-      <div class="pricing-header-button-wrap">
-        <div class="pricing-teacher-call">Are you a College Access organization looking to leverage Lemma?</div><a href="https://lem.ma/home/contact" class="pricing-header-button blue">Contact us for pricing!</a></div>
     </div>
     <div class="pricing-wrap">
       <div class="pricing-product">
         <div class="pricing-top blue"></div>
-          <h1 class="pricing-productname">SAT Free</h1>
+          <h1 class="pricing-productname">SAT Basic</h1>
           <div class="pricing-product-desc-wrap">
             <div class="pricing-price-wrap">
               <div class="pricing-price" style="height:64px;">Free</div>
@@ -84,8 +84,8 @@
           <h1 class="pricing-productname">SAT Guided</h1>
         <div class="pricing-product-desc-wrap">
           <div class="pricing-price-wrap">
-            <div class="pricing-price">$12.50<span style="font-size: 16px; font-weight: 300; color: gray"> per month</span>
-            <br><span style="font-size: 14px; font-weight: 200; color: grey">*billed annually</span></div>
+            <div class="pricing-price">$9.99<span style="font-size: 16px; font-weight: 300; color: gray"> per month</span>
+            <br><span style="font-size: 14px; font-weight: 200; color: grey">*$149.85 for 15 months!</span></div>
           </div>
           <div class="pricing-product-desc">The Lemma system guides you to your best SAT score!</div>
           <div class="pricing-button-wrap"><a href="https://lemma.app/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button orange">Get Started!</a></div>
@@ -113,7 +113,7 @@
         <h1 class="pricing-productname">SAT Mentored</h1>
         <div class="pricing-product-desc-wrap">
           <div class="pricing-price-wrap">
-            <div class="pricing-price">$25.00<span style="font-size: 16px; font-weight: 300; color: gray;"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey;">*billed annually</span></div>
+            <div class="pricing-price">$24.99<span style="font-size: 16px; font-weight: 300; color: gray;"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey;">*$374.85 for 15 months of prep!</span></div>
           </div>
           <div class="pricing-product-desc">The Lemma team works with you more intensely to boost your score!</div>
           <div class="pricing-button-wrap"><a href="https://lem.ma/contact" class="pricing-button yellow">Contact us!</a></div>
