--- a/public/prep.html
+++ b/public/prep.html
@@ -39,7 +39,7 @@
 					<a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
 					<a href="/tracks/sat-math/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a>
 					<a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a>
-					<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Login</a>
+					<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Log In</a>
 				</nav>
 			<div class="w-nav-button">
 				<div class="w-icon-nav-menu"></div>
@@ -60,8 +60,8 @@
 	</div>
 	<div id="Hero" class="hero">
 		<div class="container-3 w-container">
-			<h1 class="heading-19 animated fadeInLeftSmall">Higher SAT Score Today</h1>
-			<h1 class="heading-18 animated fadeInRightSmall">College Success Tomorrow</h1>
+			<h1 class="heading-19 animated fadeInLeft">Higher SAT Score Today</h1>
+			<h1 class="heading-18 animated fadeInRight">College Success Tomorrow</h1>
 		</div>
 		<div class="container-5 w-container animated fadeIn">
 			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Start Your SAT Prep Here!</a>
@@ -131,8 +131,8 @@
 		</div>
 	</div>
 	<div data-w-id="1a11049b-3c92-126a-dd13-a1e16d1872c8" style="opacity:0" class="call-banner">
-		<div class="w-container">
-			<div class="call-2">Lemma partners with great organizations to change their students' lives</div><a href="/partners" class="button-6 w-button">Learn More!</a>
+		<div class="w-container call-2-wrapper">
+			<div class="call-2">Lemma partners with College Access Non-profits to help change their students' lives</div><a href="/partners" class="button-6 w-button">Learn More!</a>
 		</div>
 	</div>
 	<div data-w-id="a4d2c0b6-9b5e-f9d6-e322-1b3fd50bde31" style="opacity:0" class="section-11">
